--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Zoetwinkel</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -12,6 +12,7 @@
 
     <main>
       <!-- Loads the specified .html file -->
+      <load src="./partials/home-page.html" />
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
     </main>
