--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,10 @@
     <main>
       <!-- Loads the specified .html file -->
       <load src="./partials/home-page.html" />
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
     </main>
 
     <load src="./partials/footer.html" />
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
