--- a/src/page-3.html
+++ b/src/page-3.html
@@ -24,5 +24,6 @@
     </main>
 
     <load src="./partials/footer.html" />
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
