--- a/src/page-3.html
+++ b/src/page-3.html
@@ -15,12 +15,8 @@
     />
 
     <main>
-      <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
-      </div>
+      <load src="./partials/privacybeleid.html" />
+      <load src="./partials/back-link.html" />
     </main>
 
     <load src="./partials/footer.html" />
