--- a/src/page-2.html
+++ b/src/page-2.html
@@ -15,12 +15,7 @@
     />
 
     <main>
-      <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 2
-        </h1>
-        <load src="./partials/back-link.html" />
-      </div>
+      <load src="./partials/neem-contact-op.html" />
     </main>
 
     <load src="./partials/footer.html" />
